Fixed Thanks page to be responsive on mobile

--- a/client/styles/Thanks.module.css
+++ b/client/styles/Thanks.module.css
@@ -6,31 +6,6 @@
   color: #212427;
 }
 
-.landing {
-  font-family: 'Bebas Neue', sans-serif;
-  font-size: 150px;
-  margin-top: 100px;
-  white-space: nowrap;
-}
-
-.events {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
-  background-color: #212427;
-  width: 100%;
-  height: 300px;
-}
-
-.events .title {
-  /*display: flex;*/
-  font-family: 'Bebas Neue', sans-serif;
-  font-size: 50px;
-  background-color: white;
-  height: fit-content;
-}
-
 .header {
   font-size: 100px;
   margin-bottom: 50px;
@@ -60,7 +35,8 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
   border-radius: 10px;
   margin-bottom: 20px;
-  /*margin-right: 10px;*/
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .dishes .item.even {
@@ -161,4 +137,32 @@
 
 .hide {
   display: none;
+}
+
+@media (max-width: 600px) {
+  .header {
+    font-size: 70px;
+  }
+
+  .dishes {
+    width: 100%;
+  }
+
+  .dishes .item {
+    width: auto;
+  }
+
+  .add {
+    right: 20px;
+    bottom: 15px;
+  }
+
+  .form {
+    font-size: 14px;
+    width: 90%;
+    margin-bottom: 50px;
+    padding: 35px 30px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
+  }
 }
